--- a/Ideal/View/AccountDetailsPage.xaml
+++ b/Ideal/View/AccountDetailsPage.xaml
@@ -154,6 +154,37 @@
                 </chart:DoughnutSeries>
             </chart:SfChart>
 
+            <!-- Lag Chart -->
+            <chart:SfChart Grid.Column="2"
+                       Background="White" Margin="2" Height="200" Width="200"
+                       VerticalAlignment="Bottom" AreaBorderThickness="0">
+                <chart:SfChart.Header>
+                    <TextBlock FontSize="15" Foreground="Black" FontFamily="Segoe UI" 
+                           Margin="0,-10,0,0">Lag</TextBlock>
+                </chart:SfChart.Header>
+                <chart:SfChart.Legend>
+                    <chart:ChartLegend Visibility="Visible"/>
+                </chart:SfChart.Legend>
+
+                <chart:PieSeries EnableAnimation="True" Palette="Custom" 
+                                ItemsSource="{Binding TotalLag}"  XBindingPath="Item" 
+                                YBindingPath="Units" ShowTooltip="True" >
+                    <chart:PieSeries.ColorModel>
+                        <chart:ChartColorModel>
+                            <chart:ChartColorModel.CustomBrushes>
+                                <SolidColorBrush Color="#99bcbcbc"/>
+                                <SolidColorBrush Color="#780000FF"/>
+                            </chart:ChartColorModel.CustomBrushes>
+                        </chart:ChartColorModel>
+                    </chart:PieSeries.ColorModel>
+                    <chart:PieSeries.AdornmentsInfo>
+                        <chart:ChartAdornmentInfo AdornmentsPosition="Top" HorizontalAlignment="Center" 
+                                              VerticalAlignment="Center" ShowLabel="True" ShowMarker="True"
+                                              SegmentLabelContent="Percentage" Foreground="Gray" FontSize="12" />
+                    </chart:PieSeries.AdornmentsInfo>
+                </chart:PieSeries>
+            </chart:SfChart>
+            
             
         </Grid>
 
